# zoe

./: .gitignore  FONTS.md  README.md  firebase.json  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
.github/workflows/: ci.yml  codegen.yml  dependencies.yml  docs.yml  prebuilt-binaries.yml  release.yml
android/: .gitignore
android/app/: build.gradle.kts  google-services.json
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements  RunnerDebug.entitlements
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/constants/: firestore_collection_constants.dart  firestore_constants.dart  firestore_field_constants.dart
lib/l10n/: app_en.arb  app_gu.arb  app_hi.arb
lib/screens/: home_screen.dart  page_detail_screen.dart  settings_screen.dart  welcome_screen.dart
lib/widgets/: app_drawer.dart  app_sidebar.dart  content_block_widget.dart  event_editor_dialog.dart  event_item_widget.dart  responsive_layout.dart  task_editor_dialog.dart  todo_item_widget.dart  whatsapp_integration_bottomsheet.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  GoogleService-Info.plist  Info.plist  MainFlutterWindow.swift  (+1 more)
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
widgetbook/: README.md  pubspec.yaml  run_widgetbook.sh
(+917 files in other folders)
